do some changes

--- a/index.html
+++ b/index.html
@@ -93,12 +93,10 @@
                 <img src="assets/img/sulaimanzahir94@gmail.com.jpg" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light"><a href="index.html">Sulaiman Zahir</a></h1>
                 <div class="social-links mt-3 text-center">
-                    <a href="https://twitter.com/SulaimanZ94" class="twitter"><i class="bx bxl-twitter"></i></a>
-                    <a href="https://www.facebook.com/aloore/" class="facebook"><i class="bx bxl-facebook"></i></a>
-                    <a href="https://www.instagram.com/sulaiman_zahir94/" class="instagram"><i
-                            class="bx bxl-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/sulaiman-zahir-3ba0aa11a/" class="linkedin"><i
-                            class="bx bxl-linkedin"></i></a>
+                    <a target="_blank" href="https://twitter.com/SulaimanZ94" class="twitter"><i class="bx bxl-twitter"></i></a>
+                    <a target="_blank" href="https://www.facebook.com/aloore/" class="facebook"><i class="bx bxl-facebook"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/sulaiman_zahir94/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/sulaiman-zahir-3ba0aa11a/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
                 </div>
             </div>
 
@@ -455,7 +453,7 @@
                             <img src="assets/img/portfolio/portfolio-1_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery"
-                                    class="venobox" title="App 1">
+                                    class="venobox" title="Digital Signage Screen">
                                     <span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span>
                                 </a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -469,7 +467,8 @@
                             <img src="img/Certifications/9_ASP_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="img/Certifications/9_ASP.jpg" data-gall="portfolioGallery" class="venobox"
-                                    title="App 1"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    title="ASP.Net Certificate From Dare Academy"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -481,7 +480,8 @@
                             <img src="assets/img/portfolio/portfolio-2_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery"
-                                    class="venobox" title="Web 3"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    class="venobox" title="Branch Manager Module For Queuing System"><span
+                                        class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -494,7 +494,7 @@
                                 alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/Screenshot_2021-03-31 EBOC GYM(2).png"
-                                    data-gall="portfolioGallery" class="venobox" title="Web 3">
+                                    data-gall="portfolioGallery" class="venobox" title="Crystal Reports Example">
                                     <span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
@@ -507,7 +507,8 @@
                             <img src="assets/img/portfolio/portfolio-3_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery"
-                                    class="venobox" title="App 2"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    class="venobox" title="Queuing System Users Page"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -519,7 +520,8 @@
                             <img src="assets/img/portfolio/smartmockups_kn0k3rok_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/smartmockups_kn0k3rok.jpg" data-gall="portfolioGallery"
-                                    class="venobox" title="Web 3"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    class="venobox" title="Responsive Designs"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -531,7 +533,8 @@
                             <img src="assets/img/portfolio/portfolio-4_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery"
-                                    class="venobox" title="Card 2"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    class="venobox" title="customers feedback design"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -543,7 +546,8 @@
                             <img src="img/Certifications/1_CSharp_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="img/Certifications/1_CSharp.jpg" data-gall="portfolioGallery" class="venobox"
-                                    title="App 1"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    title="C Sharp Certificate From SoloLearn site"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -555,7 +559,8 @@
                             <img src="assets/img/portfolio/point-of-sale01_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/point-of-sale01.png" data-gall="portfolioGallery"
-                                    class="venobox" title="Web 3"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    class="venobox" title="Point Of Sale - Login page"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -567,7 +572,8 @@
                             <img src="assets/img/portfolio/portfolio-5_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery"
-                                    class="venobox" title="Web 2"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    class="venobox" title="customers feedback Keyboard Example"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -579,7 +585,8 @@
                             <img src="img/Certifications/6_SQL_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="img/Certifications/6_SQL.jpg" data-gall="portfolioGallery" class="venobox"
-                                    title="App 1"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    title="SQL Certificate from SoloLearn site"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -592,7 +599,8 @@
                                 alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/Screenshot_2021-03-31 EBOC GYM(3).png"
-                                    data-gall="portfolioGallery" class="venobox" title="Web 3"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    data-gall="portfolioGallery" class="venobox" title="Scann QR Code Web System"><span
+                                        class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -604,7 +612,8 @@
                             <img src="assets/img/portfolio/portfolio-6_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery"
-                                    class="venobox" title="App 3"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    class="venobox" title="customers feedback starts design"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -617,7 +626,8 @@
                                 alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/Screenshot_2021-03-31 EBOC GYM(1).png"
-                                    data-gall="portfolioGallery" class="venobox" title="Web 3"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    data-gall="portfolioGallery" class="venobox" title="Gym Managment system"><span
+                                        class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -629,7 +639,8 @@
                             <img src="img/Certifications/8_HTML_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="img/Certifications/8_HTML.jpg" data-gall="portfolioGallery" class="venobox"
-                                    title="App 1"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    title="HTML Certificate from SoloLearn site"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -641,7 +652,8 @@
                             <img src="assets/img/portfolio/portfolio-7_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery"
-                                    class="venobox" title="Card 1"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    class="venobox" title="Chatting Systems design"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -653,7 +665,8 @@
                             <img src="assets/img/portfolio/point-of-sale02_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/point-of-sale02.png" data-gall="portfolioGallery"
-                                    class="venobox" title="Web 3"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    class="venobox" title="point-of-sale system"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -665,7 +678,8 @@
                             <img src="img/Certifications/4_CSS_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="img/Certifications/4_CSS.jpg" data-gall="portfolioGallery" class="venobox"
-                                    title="App 1"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    title="CSS Certificate from SoloLearn site"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -677,19 +691,21 @@
                             <img src="assets/img/portfolio/portfolio-8_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery"
-                                    class="venobox" title="Card 3"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    class="venobox" title="Digital Signage RSS Example"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
 
-                    <!-- Queuing System -->
+                    <!-- Gym Management -->
                     <div class="col-lg-3 col-md-6 portfolio-item filter-card">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/smartmockups_kn0jjefq_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/smartmockups_kn0jjefq.jpg" data-gall="portfolioGallery"
-                                    class="venobox" title="Web 3"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    class="venobox" title="Gyms Managment style"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -701,7 +717,8 @@
                             <img src="img/Certifications/2_jQuery_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="img/Certifications/2_jQuery.jpg" data-gall="portfolioGallery" class="venobox"
-                                    title="App 1"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    title="Jquery Certificate from SoloLearn site"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -713,7 +730,8 @@
                             <img src="assets/img/portfolio/point-of-sale03_tn.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/point-of-sale03.png" data-gall="portfolioGallery"
-                                    class="venobox" title="Web 3"><span class="iconify" data-icon="si-glyph:magnifier" data-inline="false"></span></a>
+                                    class="venobox" title="point-of-sale design"><span class="iconify"
+                                        data-icon="si-glyph:magnifier" data-inline="false"></span></a>
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
