--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
     <style>
         .undraw-right {
             width: 100%;
+            height: 100%;
             position: absolute;
+            background-image: url(assets/img/BG01.jpg);
+            overflow: hidden;
         }
 
         .undraw-right img {
             float: right;
+            width: 100%;
         }
 
         .MyPhoneNumber-Label {
@@ -93,10 +97,14 @@
                 <img src="assets/img/sulaimanzahir94@gmail.com.jpg" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light"><a href="index.html">Sulaiman Zahir</a></h1>
                 <div class="social-links mt-3 text-center">
-                    <a target="_blank" href="https://twitter.com/SulaimanZ94" class="twitter"><i class="bx bxl-twitter"></i></a>
-                    <a target="_blank" href="https://www.facebook.com/aloore/" class="facebook"><i class="bx bxl-facebook"></i></a>
-                    <a target="_blank" href="https://www.instagram.com/sulaiman_zahir94/" class="instagram"><i class="bx bxl-instagram"></i></a>
-                    <a target="_blank" href="https://www.linkedin.com/in/sulaiman-zahir-3ba0aa11a/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                    <a target="_blank" href="https://twitter.com/SulaimanZ94" class="twitter"><i
+                            class="bx bxl-twitter"></i></a>
+                    <a target="_blank" href="https://www.facebook.com/aloore/" class="facebook"><i
+                            class="bx bxl-facebook"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/sulaiman_zahir94/" class="instagram"><i
+                            class="bx bxl-instagram"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/sulaiman-zahir-3ba0aa11a/" class="linkedin"><i
+                            class="bx bxl-linkedin"></i></a>
                 </div>
             </div>
 
@@ -124,7 +132,7 @@
                     data-typed-items="Web Developer, Software Developer, Freelancer,Full-Stack-Developer"></span></p>
         </div>
         <div class="undraw-right">
-            <img src="assets/img/undraw_Code_thinking_re_gka2.svg" alt="undraw_Code_thinking_re_gka2" width="50%">
+            <img src="assets/img/BG01.jpg" alt="undraw_Code_thinking_re_gka2" width="50%">
         </div>
     </section><!-- End Hero -->
 
@@ -136,7 +144,7 @@
 
                 <div class="section-title">
                     <h2>About</h2>
-                    <p> I am a passionate young man. I like to play sports and solve problems that require logic.
+                    <p> I am an ambitious young man. I like to play sports and solve problems that require logic.
                         I strive to be better always. All those who know me describe me with good manners.
                         I hope to be better than they think </p>
                 </div>
