--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="d-flex flex-column">
 
             <div class="profile">
-                <img src="assets/img/sulaimanzahir94@gmail.com.jpg" alt="" class="img-fluid rounded-circle">
+                <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light"><a href="index.html">Sulaiman Zahir</a></h1>
                 <div class="social-links mt-3 text-center">
                     <a target="_blank" href="https://twitter.com/SulaimanZ94" class="twitter"><i
@@ -151,7 +151,7 @@
 
                 <div class="row">
                     <div class="col-lg-4" data-aos="fade-right">
-                        <img src="assets/img/sulaimanzahir94@gmail.com.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                         <div class="row">
@@ -394,6 +394,23 @@
                     </div>
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                         <h3 class="resume-title">Professional Experience</h3>
+                        <div class="resume-item">
+                            <h4>IT Programmer Analyst</h4>
+                            <h5>April. 2021 - Desc. 2021</h5>
+                            <p><em>Freelancer</em></p>
+                            <p><em><a href="http://maps.google.com/?q=Jordan" target="_blank">Jordan</a>, <a
+                                        href="http://maps.google.com/?q=Amman" target="_blank">Amman</a> </em></p>
+                            <ul>
+                                <li>Work as a Full-Stack-Developer.</li>
+                                <li>Build Apps From scratch.</li>
+                                <li>using templates with best practices usage.</li>
+                                <li>Communicate with clients and discuss business flow.</li>                                
+                                <li>Create and manipulate Database.</li>
+                                <li>work with different servers.</li>
+                                <li>work with different web APIs.</li>                                
+                                <li>work with SMTP, and more...</li>
+                            </ul>
+                        </div>
                         <div class="resume-item">
                             <h4>ASP.NET Software Developer</h4>
                             <h5>Nov. 2018 - April. 2021</h5>
