--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             width: 100%;
             height: 100%;
             position: absolute;
-            background-image: url(assets/img/BG01.jpg);
+            background-image: url(assets/img/BG01-min.jpg);
             overflow: hidden;
         }
 
@@ -132,7 +132,7 @@
                     data-typed-items="Web Developer, Software Developer, Freelancer,Full-Stack-Developer"></span></p>
         </div>
         <div class="undraw-right">
-            <img src="assets/img/BG01.jpg" alt="undraw_Code_thinking_re_gka2" width="50%">
+            <img src="assets/img/BG01-min.jpg" alt="undraw_Code_thinking_re_gka2" width="50%">
         </div>
     </section><!-- End Hero -->
 
@@ -151,7 +151,7 @@
 
                 <div class="row">
                     <div class="col-lg-4" data-aos="fade-right">
-                        <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" style="filter: grayscale(1);">
+                        <img src="assets/img/sulaimanzahir94@gmail.com.jpg" class="img-fluid" alt="" style="filter: grayscale(1);">
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                         <div class="row">
