--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                         </div>
 
                         <div class="progress">
-                            <span class="skill">XML | JSON | WS | WPS | API <i class="val">80%</i></span>
+                            <span class="skill">XML | JSON | WS | API <i class="val">80%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                     aria-valuemax="100"></div>
