--- a/index.html
+++ b/index.html
@@ -807,8 +807,8 @@
                     </div>
                     <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                         <div class="icon"><i class="icofont-settings"></i></div>
-                        <h4 class="title"><a href="">Web Controls</a></h4>
-                        <p class="description">I can also handle and use web controls well.
+                        <h4 class="title"><a href="">Frameworks</a></h4>
+                        <p class="description">I can also handle and use Frameworks well.
                             By it I mean all the frameworks such as Bootstrap, Jquery UI and others</p>
                     </div>
                     <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
