--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
             width: 100%;
             height: 100%;
             position: absolute;
-            background-image: url(assets/img/BG01-min.jpg);
             overflow: hidden;
+            background-image: url(assets/img/design.png);
+            background-size: cover;
         }
 
         .undraw-right img {
@@ -132,7 +133,7 @@
                     data-typed-items="Web Developer, Software Developer, Freelancer,Full-Stack-Developer"></span></p>
         </div>
         <div class="undraw-right">
-            <img src="assets/img/BG01-min.jpg" alt="undraw_Code_thinking_re_gka2" width="50%">
+            <!-- <img src="assets/img/design.png" alt="undraw_Code_thinking_re_gka2" width="50%"> -->
         </div>
     </section><!-- End Hero -->
 
